fixing the squashed button on contact form on ios

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -706,6 +706,7 @@ right: 14%;
   }
   .contact-left {
     width: 45%;
+    height: 400px;
   }
   .contact-right {
     width: 45%;
@@ -725,7 +726,6 @@ right: 14%;
       border: none;
       margin: 0;
       padding: 0;
-      height: 90px;
 
       input {
         width: 100%;
@@ -776,36 +776,53 @@ right: 14%;
         outline: none;
       }
 
+    }
+    .input-area {
+      height: 20%;
+    }
+    .text-area {
+      height: 30%;
+      margin-top: 20px;
+    }
+    .button-area {
+      height: 20%;
+display: flex;
+align-items: center;
+    }
+
+    button {
+
+       cursor: pointer;
+       transition: ease-out 0.5s;
+       -webkit-transition: ease-out 0.5s;
+       -moz-transition: ease-out 0.5s;
+        padding: 10px 40px;
+        color: var(--heading-color);
+        background: transparent;
+        border: 2px solid var(--heading-color);
+        font-size: 14px;
+        font-family: $title-font;
+        margin-top: 50px;
+        width: 50%;
+        height: 10%;
+        min-height: 50px;
+    }
 
 
-      button {
-
-         cursor: pointer;
-         transition: ease-out 0.5s;
-         -webkit-transition: ease-out 0.5s;
-         -moz-transition: ease-out 0.5s;
-          padding: 10px 40px;
-          color: var(--heading-color);
-          background: transparent;
-          border: 2px solid var(--heading-color);
-          font-size: 14px;
-          font-family: $title-font;
-          margin: 30px 0px;
-      }
-
-
-      button:hover {
-          color: var(--nav-color);
-          background: white;
-
-      }
-
-      button:focus {
-        outline: none;
-        box-shadow: none;
-      }
+    button:hover {
+        color: var(--nav-color);
+        background: white;
 
     }
+
+    button:focus {
+      outline: none;
+      box-shadow: none;
+    }
+
+
+
+
     label.error {
       font-size: 12px;
       padding-left: 15px;
@@ -980,8 +997,10 @@ right: 14%;
   .contact {
     justify-content:center;
     flex-direction: column;
+    min-height: 900px;
     .contact-left {
       width: 100%;
+      height: 300px;
     }
     .contact-right {
       width: 100%;
